--- a/KundalikCom/KundalikCom.csproj
+++ b/KundalikCom/KundalikCom.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Aplication\Aplication.csproj" />
   </ItemGroup>
 
 </Project>
